correction alignement section activités

--- a/style.css
+++ b/style.css
@@ -391,6 +391,11 @@ section.footer
     font-size: 20px;
     font-family: 'Raleway';
 }
+.titleSection
+    {
+        width: 100%;
+        margin: auto;
+    }
 .galery
 {
     width: 100%;
@@ -522,10 +527,6 @@ section.footer
     {
         width: 150px;
     }
-    .buttonSearchBar
-    {
-        
-    }
     .filtersSection
     {
         display: flex;
@@ -589,6 +590,11 @@ section.footer
         display: flex;
         flex-direction: column;
         padding-bottom: 0px;
+    }
+    .titleSection
+    {
+        width: 90%;
+        margin: auto;
     }
     .galery > div 
     {
